package net.civeira.phylax.features.access.userinvitation.domain;

import java.util.ArrayList;
import java.util.HashMap;
import java.util.List;
import java.util.Map;
import java.util.Optional;

import lombok.AccessLevel;
import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.EqualsAndHashCode;
import lombok.Getter;
import lombok.NonNull;
import lombok.ToString;
import lombok.With;
import lombok.experimental.Delegate;
import net.civeira.phylax.common.exception.ConstraintException;
import net.civeira.phylax.common.value.validation.ConstraintFailList;
import net.civeira.phylax.features.access.userinvitation.domain.event.UserInvitationCreateEvent;
import net.civeira.phylax.features.access.userinvitation.domain.event.UserInvitationDeleteEvent;
import net.civeira.phylax.features.access.userinvitation.domain.event.UserInvitationEvent;
import net.civeira.phylax.features.access.userinvitation.domain.event.UserInvitationUpdateEvent;
import net.civeira.phylax.features.access.userinvitation.domain.valueobject.AcceptedAtVO;
import net.civeira.phylax.features.access.userinvitation.domain.valueobject.AcceptedByVO;
import net.civeira.phylax.features.access.userinvitation.domain.valueobject.CreatedAtVO;
import net.civeira.phylax.features.access.userinvitation.domain.valueobject.EmailVO;
import net.civeira.phylax.features.access.userinvitation.domain.valueobject.ExpiredAtVO;
import net.civeira.phylax.features.access.userinvitation.domain.valueobject.InvitedByVO;
import net.civeira.phylax.features.access.userinvitation.domain.valueobject.MetadataJsonVO;
import net.civeira.phylax.features.access.userinvitation.domain.valueobject.RolesVO;
import net.civeira.phylax.features.access.userinvitation.domain.valueobject.StatusVO;
import net.civeira.phylax.features.access.userinvitation.domain.valueobject.TenantVO;
import net.civeira.phylax.features.access.userinvitation.domain.valueobject.TokenHashVO;
import net.civeira.phylax.features.access.userinvitation.domain.valueobject.UidVO;
import net.civeira.phylax.features.access.userinvitation.domain.valueobject.VersionVO;

/**
 * user-invitation
 */
@Builder
@Getter
@With
@ToString
@AllArgsConstructor(access = AccessLevel.PRIVATE)
@EqualsAndHashCode
public class UserInvitation implements UserInvitationRef {

  /**
   * Prepare a new user invitation with the provided values
   *
   * @autogenerated EntityGenerator
   * @param change A set of values to create a new user invitation
   * @throws ConstraintException If there are some constraints fails on the changes.
   * @return A well formed user invitation.
   */
  public static UserInvitation create(final UserInvitationChangeSet change)
      throws ConstraintException {
    UserInvitation instance = new UserInvitation(change, Optional.empty());
    instance.addEvent(UserInvitationCreateEvent.builder().payload(instance).build());
    return instance;
  }

  /**
   * El accepted at de user invitation
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private AcceptedAtVO acceptedAtValue = AcceptedAtVO.nullValue();

  /**
   * El accepted by de user invitation
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private AcceptedByVO acceptedByValue = AcceptedByVO.nullValue();

  /**
   * El created at de user invitation
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private CreatedAtVO createdAtValue;

  /**
   * El email de user invitation
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private EmailVO emailValue;

  /**
   * El expired at de user invitation
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private ExpiredAtVO expiredAtValue;

  /**
   * El invited by de user invitation
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private InvitedByVO invitedByValue;

  /**
   * El metadata json de user invitation
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private MetadataJsonVO metadataJsonValue = MetadataJsonVO.nullValue();

  /**
   * List of events
   *
   * @autogenerated EntityGenerator
   */
  @Builder.Default
  private List<UserInvitationEvent> recordedEvents = List.of();

  /**
   * El roles de user invitation
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private RolesVO rolesValue = RolesVO.nullValue();

  /**
   * El status de user invitation
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private StatusVO statusValue = StatusVO.nullValue();

  /**
   * El tenant de user invitation
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private TenantVO tenantValue;

  /**
   * El token hash de user invitation
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private TokenHashVO tokenHashValue;

  /**
   * A number to identify the db record
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private UidVO uidValue;

  /**
   * Campo con el número de version de user invitation para controlar bloqueos optimistas
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private VersionVO versionValue = VersionVO.nullValue();

  /**
   * @autogenerated EntityGenerator
   * @param attribute
   * @param previous
   */
  private UserInvitation(final UserInvitationChangeSet attribute,
      final Optional<UserInvitation> previous) {
    ConstraintFailList list = new ConstraintFailList();
    this.uidValue = attribute.readUid(previous, list);
    this.tenantValue = attribute.readTenant(previous, list);
    this.emailValue = attribute.readEmail(previous, list);
    this.rolesValue = attribute.readRoles(previous, list);
    this.invitedByValue = attribute.readInvitedBy(previous, list);
    this.tokenHashValue = attribute.readTokenHash(previous, list);
    this.metadataJsonValue = attribute.readMetadataJson(previous, list);
    this.statusValue = attribute.readStatus(previous, list);
    this.createdAtValue = attribute.readCreatedAt(previous, list);
    this.expiredAtValue = attribute.readExpiredAt(previous, list);
    this.acceptedAtValue = attribute.readAcceptedAt(previous, list);
    this.acceptedByValue = attribute.readAcceptedBy(previous, list);
    this.versionValue = attribute.readVersion(previous, list);
    if (list.hasErrors()) {
      throw new ConstraintException("Invalid values on UserInvitation", list);
    }
    this.recordedEvents = previous.map(UserInvitation::getRecordedEvents).orElseGet(List::of);
  }

  /**
   * Apply changes to delete a user invitation
   *
   * @autogenerated EntityGenerator
   * @return A instance of user invitation ready to be deleted
   */
  public UserInvitation delete() {
    UserInvitation instance = new UserInvitation(new UserInvitationChangeSet(), Optional.of(this));
    instance.addEvent(UserInvitationDeleteEvent.builder().payload(instance).build());
    return instance;
  }

  /**
   * @autogenerated EntityGenerator
   * @return
   */
  public Map<String, String> toMap() {
    Map<String, String> map = new HashMap<>(13);
    uidToMap(map);
    tenantToMap(map);
    emailToMap(map);
    rolesToMap(map);
    invitedByToMap(map);
    tokenHashToMap(map);
    metadataJsonToMap(map);
    statusToMap(map);
    createdAtToMap(map);
    expiredAtToMap(map);
    acceptedAtToMap(map);
    acceptedByToMap(map);
    versionToMap(map);
    return map;
  }

  /**
   * Modify the values for some of the properties of a user invitation
   *
   * @autogenerated EntityGenerator
   * @param change The properties to be modified
   * @throws ConstraintException If there are some constraints fails on the changes.
   * @return A modified instance of user invitation
   */
  public UserInvitation update(final UserInvitationChangeSet change) throws ConstraintException {
    UserInvitation instance = new UserInvitation(change, Optional.of(this));
    instance.addEvent(UserInvitationUpdateEvent.builder().payload(instance).build());
    return instance;
  }

  /**
   * @autogenerated EntityGenerator
   * @return
   */
  public UserInvitation withNextVersion() {
    return withVersionValue(VersionVO.from(nextVersion()));
  }

  /**
   * @autogenerated EntityGenerator
   * @param event
   */
  private void addEvent(final UserInvitationEvent event) {
    List<UserInvitationEvent> events = new ArrayList<>(this.recordedEvents);
    events.add(event);
    this.recordedEvents = List.copyOf(events);
  }
}
