' @autogenerated
@startuml
left to right direction
title Clases para user invitation
class access.Tenant{
uid:string
name:string
root:boolean
domain:string
enabled:boolean
markForDelete:boolean
markForDeleteTime:datetime
version:integer
list()
retrieve()
create()
update()
delete()
enable()
disable()
}
class access.User{
uid:string
name:string
password:string
email:string
wellcomeAt:datetime
emailVerified:boolean
enabled:boolean
approve:UserApproveOptions
temporalPassword:boolean
useSecondFactors:boolean
secondFactorSeed:string
blockedUntil:datetime
provider:string
version:integer
list()
retrieve()
create()
update()
delete()
register()
verify()
accept()
reject()
disable()
enable()
unlock()
block()
setMfaSeed()
changePassword()
verifyEmail()
}
class access.User{
uid:string
name:string
password:string
email:string
wellcomeAt:datetime
emailVerified:boolean
enabled:boolean
approve:UserApproveOptions
temporalPassword:boolean
useSecondFactors:boolean
secondFactorSeed:string
blockedUntil:datetime
provider:string
version:integer
list()
retrieve()
create()
update()
delete()
register()
verify()
accept()
reject()
disable()
enable()
unlock()
block()
setMfaSeed()
changePassword()
verifyEmail()
}
class access.UserInvitation{
uid:string
email:string
roles:string
tokenHash:string
metadataJson:blob
status:UserInvitationStatusOptions
createdAt:datetime
expiredAt:datetime
acceptedAt:datetime
version:integer
list()
retrieve()
create()
update()
delete()
}
access.Tenant "1"  o--  "N*" access.UserInvitation: tenant
access.User "1"  o--  "N*" access.UserInvitation: invitedBy
access.User "1"  o--  "N*" access.UserInvitation: acceptedBy

footer Generado el %date("dd.MM.yyyy' a las 'HH:mm")
@enduml
